2003-05-27  Loban A Rahman <loban@earthling.net>

	* stickynotes.c, stickynotes_applet.*: Icon size is no longer huge.
	* pixmaps/resize_*.png: Changed look.

2003-05-23  Loban A Rahman <loban@earthling.net>

	* stickynotes.schemas.in: New default for title format. Now the
	  current locale is respected when using the date as the title. Fixes
	  bug #112606.
	* stickynotes.glade: Reworded some UI text to make it more HIG
	  compliant.
	* stickynotes.c: Changed how custom colors are applied. Now, when the
	  "color from system theme" is used, the current gtk theme is actually
	  used (didn't before). There are still a few kinks to iron out here.
	* stickynotes.c, stickynotes.h, stickynotes_applet_callbacks.c:
	  Unspegettified internal API. :-)
	* stickynotes.c: Fixed bug #113413. When changing colors, the notes
	  now fully update properly.
	* stickynotes.c, stickynotes_applet.*: Fixed bug #113414, all sticky
	  notes icons are added to an icon factory, making them themable. The
	  icons are too big atm, will fix.
	* pixmaps/*.png: Updated all the icons (made bigger into 48x48 size).

2003-05-21  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.c, stickynotes_applet_callbacks.*:
	  Fixed compile warnings,
	  Bug #112616 now fully fixed, but there seems to be a bug in the
	  listener for bonobo_ui_components. They trigger unnecessarily.
	* stickynotes.c: Changed UI slightly. Now, when a note is locked, the
	  button shows a locked picture with a "Locked Note" tooltip, rather
	  than a unlocked picture with a "Unlock Note" tooltip. And vice
	  versa.
	* TODO: Updated.
	* stickynotes.c: Fixed an infinite loop when toggling lock using menu.
	* *.h, *.c: Bug #109427 now fully done. Individual note colors are now
	possible. Have fun.

2003-05-20  Dennis Cranston <dennis_cranston at yahoo com>

	* stickynotes.glade:  Fix various HIG bugs.
	  a. Fix mnemonic conflicts for Height/Help & Color/Close.  
	  b. The preferences dialog should not be resizable.  