@@ -2,6 +2,8 @@
 
 	* stickynotes.c, stickynotes_applet.*: Icon size is no longer huge.
 	* pixmaps/resize_*.png: Changed look.
+	* stickynotes.c: Got rid of infinite loop when changing note
+	  properties.
 
 2003-05-23  Loban A Rahman <loban@earthling.net>
 
